2012-05-23 Riccardo Mottola <rm@gnu.org>

	* Bundles/AudioFile/GNUmakefile
	* Bundles/AudioFile/GNUmakefile.preamble
	* Bundles/WaveOut/WaveOut.m
	Adapt windows port to new methods and standards.

2012-05-22 Riccardo Mottola <rm@gnu.org>

	* Bundles/ID3Tag/ID3Tag.h
	* Bundles/ID3Tag/ID3Tag.m
	Do not redefine ID3 types.

	* Bundles/MacOSX/MacOSXPlayer.m
	Conform to new endianness parameter.
	
2012-05-21  Philippe Roussel  <p.o.roussel@free.fr>

	* Bundles/ALSA/ALSA.m
	* Bundles/ALSA/ALSA.h
	Device parameters need to be set when they change from one
	song to another. In that case prepareDeviceWithChannels: is
	called with an open device so check for pcm_handle and set
	params if it's not NULL.
	prepareDeviceWithChannels: is always called before openDevice
	so we can handle endianness in there.
	ALSA device is used by 2 threads, protect it with a lock.

2012-05-19 Riccardo Mottola <rm@rnu.org>

	* Cynthiune.nib
	Fix problems and add playlist.

	* CynthiuneController.m:
	Fix header imports.

2012-05-17  Philippe Roussel  <p.o.roussel@free.fr>

	* PlaylistController.m
	Optimize adding multiple songs to the playlist by using
	[Playlist -addSongsInArray:] : PlaylistChangedNotification
	is sent only one time, not for every song added

2012-05-17 Riccardo Mottola <rm@gnu.org>

	* PlaylistController.m
	Fix repeat and shuffle menu items.

	* Frameworks/Cynthiune/utils.h
	Map macros to GNUstep macros and provide Mac replacements.

2012-05-16  Philippe Roussel  <p.o.roussel@free.fr>

       * Player.m
       * Player.h
       Fix crashes when seeking through a file when using a threaded
       backend. In this case the input stream is accessed from at
       least two threads and so must be protected by a lock.

2012-05-15 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

	* Playlist.m
	  just skip duplicate songs when loading playlists or 
	  trying to add a song already in the playlist instead
	  of throwing an exception and aborting

2012-05-14 Philippe Roussel
